--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "binar-mock-test-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://test-binar.herokuapp.com/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,17 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "next": "12.2.5",
-    "next-redux-wrapper": "^7.0.5",
     "next-router": "^1.3.6",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^4.9.3",
-    "react-redux": "^8.0.2",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
