--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
+    "http-proxy-middleware": "^2.0.6",
     "next": "12.2.5",
     "next-router": "^1.3.6",
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^4.9.3",
-    "tailwindcss": "^3.1.8",
-    "proxy": "https://test-binar.herokuapp.com/"
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "eslint": "8.23.0",
